added custom trivy ca path

--- a/make/harbor.yml.tmpl
+++ b/make/harbor.yml.tmpl
@@ -100,6 +100,8 @@ trivy:
   # https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line
   #
   # github_token: xxx
+  # Uncomment the following section if you want to override the default system CA bundle
+  # ca_bundle: /etc/pki/tls/certs/ca-bundle.crt
 
 jobservice:
   # Maximum number of job workers in job service
